--- a/AgilProjekt/BackendServer/package.json
+++ b/AgilProjekt/BackendServer/package.json
@@ -14,5 +14,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "eslint": "^8.52.0",
+    "eslint-plugin-vue": "^9.18.1"
   }
 }
