--- a/AgilProjekt/package.json
+++ b/AgilProjekt/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "pinia": "^2.1.6",
@@ -26,7 +27,7 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
     "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
+    "eslint-plugin-vue": "^9.18.1",
     "jsdom": "^22.1.0",
     "prettier": "^3.0.3",
     "vite": "^4.4.9",
