--- a/AgilProjekt/package.json
+++ b/AgilProjekt/package.json
@@ -27,6 +27,9 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
     "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.18.1",
     "jsdom": "^22.1.0",
     "prettier": "^3.0.3",
