--- a/AgilProjekt/package.json
+++ b/AgilProjekt/package.json
@@ -14,12 +14,19 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pinia": "^2.1.6",
+    "sequelize": "^6.33.0",
     "sqlite3": "^5.1.6",
+    "vee-validate": "^4.11.8",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vuex": "^4.1.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
