--- a/AgilProjekt/package.json
+++ b/AgilProjekt/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
     "pinia": "^2.1.6",
     "sqlite3": "^5.1.6",
     "vue": "^3.3.4",
